--- a/GameSettings/GameSettings.csproj
+++ b/GameSettings/GameSettings.csproj
@@ -49,12 +49,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="MVVM\Models\" />
-	  <Folder Include="MVVM\ViewModels\" />
 	  <Folder Include="MVVM\Views\" />
 	</ItemGroup>
 
