--- a/GameSettings/GameSettings.csproj
+++ b/GameSettings/GameSettings.csproj
@@ -64,6 +64,8 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
+		<PackageReference Include="RestEase" Version="1.6.4" />
+		<PackageReference Include="RestEase.HttpClientFactory" Version="1.6.4" />
 	</ItemGroup>
 
 	<ItemGroup>
